feat(error): render all errors as json responses
